# nairobi-bot

./: .gitignore  .travis.yml  Changelog.md  LICENSE  README.md  config.yaml  index.html  nairobi-bot.cabal  stack-7.10.yaml  stack-head.yaml  stack.yaml
app/: Main.hs
css/theme/: solarized-dark.css
src/: Bot.hs
src/Bot/: Define.hs  Echo.hs  Factoid.hs  GIF.hs  Help.hs  Meetup.hs  Network.hs  NowPlaying.hs  Ping.hs  Reputation.hs  Seen.hs  Types.hs  URL.hs  Wolfram.hs
src/Bot/Data/: Config.hs  Network.hs
src/Data/Bot/: Config.hs
tests/: BotSpec.hs
tests/Bot/: EchoSpec.hs  GIF.json  TypesSpec.hs  URLSpec.hs
tests/Bot/Data/: ConfigSpec.hs  NetworkSpec.hs  example_config.json  example_config.yaml  invalid_config.yaml
